--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -369,8 +369,9 @@ body.projectOpened {
   }
 }
 
-#our-recent-work {
-  margin-bottom: 100px;
+#our-recent-work,
+#our-work {
+  padding-bottom: 100px;
 } // #our-recent-work
 
 .workList {
